# catlass

./: .gitignore  CHANGELOG.md  CMakeLists.txt  OAT.xml  README.md  gen_data.py  mlapo_bf16.cpp  mlapo_golden copy 2.py  mlapo_golden.py  mlapo_golden_left_side.py  mlapo_golden_left_side_after_split.py  mlapo_golden_left_side_split_first.py  mlapo_golden_quant0_cache2.py  p y t  prof.sh  results.csv  results.csv.csv  simulator.sh
.cursor/plans/: ---2b3ea268.plan.md  evt----d-c-x-78c1aba4.plan.md  evt-double-buffer-pipeline-40a77067.plan.md
catlass_test/: .gitignore  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
catlass_test/catlass_test/: README.md  __init__.py
catlass_test/catlass_test/adapter/: __init__.py  adapter_base.py  batched_matmul_adapter.py  gemm_adapter.py  grouped_matmul_adapter.py  matmul_adapter.py
catlass_test/catlass_test/catlass/: gemm_coord.py
catlass_test/catlass_test/common/: __init__.py
catlass_test/catlass_test/compiler/: __init__.py  options.py
catlass_test/catlass_test/csrc/: CMakeLists.txt  kernel.cpp
catlass_test/catlass_test/csrc/examples/00_basic_matmul/: basic_matmul.hpp
catlass_test/catlass_test/csrc/include/catlass_test/: common.hpp
catlass_test/catlass_test/interface/function/: __init__.py
catlass_test/tests/: test_compiler.py
cmake/: catlass-config.cmake
cmake/modules/: CMakeASCCompiler.cmake.in  CMakeASCENDCompiler.cmake.in  CMakeASCENDInformation.cmake  CMakeASCInformation.cmake  CMakeDetermineASCCompiler.cmake  CMakeDetermineASCENDCompiler.cmake  CMakeTestASCCompiler.cmake  CMakeTestASCENDCompiler.cmake
docs/: advanced_collections.md  api.md  catlass_optimize_guidance.md  dispatch_policies.md  evaluation_collections.md  prerequisites.md  python_api_design.md  quickstart.md  summary.md  tutorials.md
docs/applying/: msopgen.md  ops.md
docs/evg/: Readme.md  evg.md  evg_api.md  evg_fusion_api.md  evg_menu.md  evg_quickstart.md  matmul_add&add_relu_cases_tutorial.md  quant_matmul_cases_tutorial.md
docs/evt/: TopologicalVisitor.md  catlass_epilogue_visitor_tree.md  evt.md  evt_design.md  matmul_add&add_relu_cases_tutorial.md  quant_matmul_cases_tutorial.md
docs/tla/: 01_layout.md
docs/tools/: performance_tools.md
examples/: CMakeLists.txt
examples/00_basic_matmul/: CMakeLists.txt  README.md  basic_matmul.cpp
examples/01_batched_matmul/: CMakeLists.txt  batched_matmul.cpp
examples/02_grouped_matmul_slice_m/: CMakeLists.txt  grouped_matmul_slice_m.cpp
examples/03_matmul_add/: CMakeLists.txt  matmul_add.cpp
examples/04_padding_matmul/: CMakeLists.txt  padding_matmul.cpp
examples/05_grouped_matmul_slice_k/: CMakeLists.txt  grouped_matmul_slice_k.cpp
examples/06_optimized_matmul/: CMakeLists.txt  README.md  optimized_matmul.cpp
examples/07_grouped_matmul_slice_m_per_token_dequant_moe/: CMakeLists.txt  grouped_matmul_slice_m_per_token_dequant_moe.cpp
examples/08_grouped_matmul/: CMakeLists.txt  grouped_matmul.cpp
examples/09_splitk_matmul/: CMakeLists.txt  splitk_matmul.cpp
examples/102_dynamic_optimized_matmul/: .gitignore  CMakeLists.txt  README.md  dynamic_optimized_matmul.cpp
examples/103_msopgen/: CMakeLists.txt  basic_matmul.json
examples/103_msopgen/CatlassBasicMatmul/: .envrc  CMakePresets.json  main.py  pyproject.toml
examples/103_msopgen/CatlassBasicMatmul/framework/tf_plugin/: tensorflow_catlass_basic_matmul_plugin.cc
examples/103_msopgen/CatlassBasicMatmul/op_host/: catlass_basic_matmul.cpp
examples/103_msopgen/CatlassBasicMatmul/op_kernel/: CMakeLists.txt
examples/103_msopgen_aclnn_catlass_basic_matmul/: .gitignore  CMakeLists.txt  README.md  aclnn_helper.h  msopgen_aclnn_catlass_basic_matmul.cpp
examples/10_grouped_matmul_slice_m_per_token_dequant/: CMakeLists.txt  example_details.md  grouped_matmul_slice_m_per_token_dequant.cpp
examples/11_grouped_matmul_slice_k_per_token_dequant/: CMakeLists.txt  grouped_matmul_slice_k_per_token_dequant.cpp
examples/12_quant_matmul/: CMakeLists.txt  quant_matmul.cpp
examples/12_quant_matmul_evg/: CMakeLists.txt  README.md  quant_matmul_evg.cpp
examples/12_quant_matmul_evt/: CMakeLists.txt  README.md  quant_matmul_evt.cpp
examples/13_basic_matmul_tla/: CMakeLists.txt  basic_matmul_tla.cpp
examples/14_optimized_matmul_tla/: CMakeLists.txt  optimized_matmul_tla.cpp
examples/19_mla/: CMakeLists.txt  README.md  gen_data.py  kernel_common.hpp  mla.cpp  mla_kernel.cpp  mla_kernel_tp1_spec.cpp  mla_tiling.cpp  mla_tiling.h  run.sh
examples/19_mla/kernel/: mla.h  mla_kernel.cpp  mla_kernel.h  mla_tp1_spec.h
examples/19_mla/tiling/: mla_tiling.cpp
examples/23_flash_attention_infer/: CMakeLists.txt  fai.cpp  fai_kernel.cpp  fai_tiling.cpp  gen_data.py  kernel_common.hpp
examples/23_flash_attention_infer/kernel/: fai.h  fai_kernel.cpp  fai_kernel.h
examples/23_flash_attention_infer/tiling/: fai_tiling.cpp  fai_tiling.h
examples/advanced/basic_matmul_aclnn/: CMakeLists.txt  README.md
examples/advanced/basic_matmul_aclnn/op_host/: CMakeLists.txt  catlass_basic_matmul.cpp  catlass_basic_matmul_tiling.h
examples/advanced/basic_matmul_aclnn/op_kernel/: CMakeLists.txt  catlass_basic_matmul.cpp
include/tla/: layout.hpp  (+4 more)
python/catlass_cppgen/: README.md  pyproject.toml
python/catlass_cppgen/catlass_cppgen/catlass/: gemm_coord.py
python/catlass_cppgen/catlass_cppgen/catlass/arch/: arch.py
python/catlass_cppgen/catlass_cppgen/catlass/layout/: coord.py  layout.py
python/catlass_cppgen/catlass_cppgen/common/: data_type.py  get_accumulator_dtype.py  tile_desc.py  typing.py
python/catlass_cppgen/catlass_cppgen/kernel/: kernel_base.py
python/catlass_cppgen/catlass_cppgen/kernel/gemm/: basic_matmul.py  gemm_base.py
python/catlass_cppgen/catlass_cppgen/op/: gemm.py  op.py
python/catlass_cppgen/tests/catlass/: test_gemm_coord.py
python/catlass_cppgen/tests/op/: test_gemm.py
scripts/: build.sh
tests/: CMakeLists.txt  run_all_test.sh  test_compile.sh  test_example.py  test_example_catlass_test.py  test_mstuner.py  test_python_extension.py  test_torch_lib.py
tools/: CMakeLists.txt
(+518 files in other folders)
