[project]
name = "catlass-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <=3.11"
dependencies = [
    "inflection>=0.5.1",
    "numpy==1.26.4",
    "pyyaml>=6.0.3",
    "torch",
    "torch-npu",
]
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
include = ["catlass_test*"]

[tool.setuptools.package-data]
"catlass_test" = ["csrc/**/*", "csrc/*"]
